--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -5,7 +5,6 @@ set(SRC_LIST
 
     src/Window.h
     src/Window.cpp
-    src/linmath.h
 )
 
 project(${MODULE_NAME})
@@ -15,7 +14,7 @@ add_exec(${MODULE_NAME} ${SRC_LIST})
 target_link_libraries(${MODULE_NAME} PUBLIC
     CONAN_PKG::glad
     CONAN_PKG::glfw
-    CONAN_PKG::opengl
+    CONAN_PKG::glm
 
     Render
 )
