--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -1,9 +1,17 @@
 set(MODULE_NAME Render)
 
+
+
 set(SRC_LIST
-    src/tmp.cpp
+    Render.h
+
+    src/Render.cpp
 )
 
 add_lib(${MODULE_NAME} STATIC ${SRC_LIST})
 
-target_link_libraries(${MODULE_NAME} PUBLIC ${CONAN_LIBS})
+target_link_libraries(${MODULE_NAME}
+    PUBLIC
+    CONAN_PKG::glm
+    CONAN_PKG::glad
+)
