Удалён модуль Render, начато описание материала, объекта и т.д.

--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -3,6 +3,8 @@ set(MODULE_NAME App)
 set(SRC_LIST
     src/main.cpp
 
+    src/Object.h
+    src/Render.h
     src/Window.h
     src/Window.cpp
 )
@@ -15,6 +17,4 @@ target_link_libraries(${MODULE_NAME} PUBLIC
     CONAN_PKG::glad
     CONAN_PKG::glfw
     CONAN_PKG::glm
-
-    Render
 )
