--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,7 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 include(common NO_POLICY_SCOPE)
 
 include(conan)
-get_filename_component(ROOT_DIR "${CMAKE_CURRENT_LIST_DIR}/.." ABSOLUTE CACHE)
-conan_config_install(ITEM "${ROOT_DIR}/conan/config")
+conan_config_install(ITEM "${CMAKE_CURRENT_LIST_DIR}/conan/config")
 # Т.к. команда `conan config install` удаляет из настроек ранее добавленные серверы в случае,
 # если она встречает в источнике файл remotes.txt, добавим сервер через команду `conan remote add`.
 conan_add_remote(NAME bincrafters URL https://bincrafters.jfrog.io/artifactory/api/conan/public-conan)
