use new model in app

--- a/src/App/CMakeLists.txt
+++ b/src/App/CMakeLists.txt
@@ -11,6 +11,7 @@ add_burbur_executable(${MODULE_NAME} ${SRC_LIST})
 
 target_link_libraries(${MODULE_NAME} PUBLIC
     Render
+    Model
 
     CONAN_PKG::glad
     CONAN_PKG::glfw
