--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,6 +34,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: sudo apt install -y libgl-dev
+    - name: Update clang to 12
+      run: |
+        wget https://apt.llvm.org/llvm.sh
+        chmod +x llvm.sh
+        sudo ./llvm.sh 12
     - name: Get Conan
       uses: turtlebrowser/get-conan@v1.0
     - name: Configure CMake
