--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,6 +29,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: ctest -C ${{env.BUILD_TYPE}}
   build-ubuntu-clang:
+    if: false # todo fix
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
